--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -20,13 +20,13 @@
     transform: rotate(-90deg);
 }
 
-/* birth of Aspera */
+/* grey Double Col - sloupec s šedým pozadím a obrázkem */
 
-.birthOfAspera {
+.greyDoubleCol {
     display: flex;
 }
 
-.text-birthOfAspera {
+.text-greyDoubleCol {
     flex-basis: 40%;
     display: flex;
     flex-direction: column;
@@ -35,24 +35,24 @@
     background-color: rgb(48, 48, 48);
 }
 
-.text-birthOfAspera h2 {
+.text-greyDoubleCol h2 {
     padding-bottom: 40px;
     text-align: center;
     color: #e0e0e0;
     text-shadow: #a0a0a0;
 }
 
-.text-birthOfAspera p {
+.text-greyDoubleCol p {
     line-height: 1.5rem;
     color: #e0e0e0;
     text-shadow: #a0a0a0;
 }
 
-.picture-birthOfAspera {
+.picture-greyDoubleCol {
     flex-basis: 60%;
 }
 
-.picture-birthOfAspera img {
+.picture-greyDoubleCol img {
     width: 100%;
     height: 100%;
 }
