--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,14 @@ h3 {
   display: none;
 }
 
+.bold {
+  font-weight: bold;
+}
+
+.text-center {
+  text-align: center;
+}
+
 @font-face {
   font-family: "nadpisovy";
   src: url("ManhattanRegular.ttf") format("truetype");
@@ -28,8 +36,9 @@ h3 {
   height: 100vh;
   width: 100%;
   background-image: linear-gradient(180deg, rgba(106,106,102,0) 57%, rgba(255,255,255,1) 100%),
-  url(../images/blizzard.jpg)
+  url(../images/mountain2.jpg)
                     ;
+  background-position-y: 20%;
 }
 .topbackground .clouds {
   position: absolute;
@@ -91,8 +100,7 @@ h3 {
     background: rgb(247, 231, 231);
     background: linear-gradient(150deg, rgba(255,224,224,0.65702030812324934) 0%, rgba(238,238,238,0.5674124649859944) 71%);
     border-radius: 2rem;
-    box-shadow: 0px 0px 40px 10px #fdefef,
-                inset 0px 0px 40px #fceded ; ;
+    box-shadow: inset 0px 0px 40px #fceded ; ;
     z-index: 9999;
 }
 
@@ -776,12 +784,12 @@ background: linear-gradient(23deg, rgba(226, 224, 224, 0.61) 85%, rgba(233, 233,
   width: 15px;
   margin: 4px;
   border-radius: 15px;
-  background:rgb(22, 8, 54);
+  background:rgb(74, 77, 105);
   cursor: pointer;
 }
 
 .active {
-  width: 45px;
+  background:rgb(22, 8, 54);
   transition: all 0.5s;
 }
 
