--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,21 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
+h1 {
+  font-family: "nadpisovy";
+  font-size: clamp(2rem, 5vw, 3rem);
+  text-align: center;
+}
+
+h2 {
+    font-family: "nadpisovy";
+    font-size: clamp(1rem, 5vw, 2rem);
+    text-align: center;
+}
+
 h3 {
   font-family: "nadpisovy";
+  font-size: clamp(0.5rem, 5vw, 1.5rem);
 }
 
 .hidden {
@@ -77,11 +90,35 @@ h3 {
 
 /************ page content ***********/
 
+.gradientWhiteTransition {
+  position: absolute;
+  top: 100vh;
+  width: 100%;
+  height: 50rem;
+  background: rgb(255,255,255);
+  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(106,106,102,0) 52%);
+  z-index: -9998;
+}
+
 .pageContent {
   display: grid;
   grid-template-columns: 130px 1fr;
   grid-template-areas: "sidebar content"
   "footer footer";
+}
+
+/*** layout alignment for mobile phones and ipads ***/ 
+
+@media(max-width:900px){
+
+
+  .pageContent {
+    display: block;
+  }
+
+  #prvni {
+    background: none;
+  }
 }
 
 /*** css item 1 - sidebar ***/
@@ -101,7 +138,7 @@ h3 {
     background: linear-gradient(150deg, rgba(255,224,224,0.65702030812324934) 0%, rgba(238,238,238,0.5674124649859944) 71%);
     border-radius: 2rem;
     box-shadow: inset 0px 0px 40px #fceded ; ;
-    z-index: 9999;
+    z-index: 11;
 }
 
 
@@ -131,6 +168,49 @@ h3 {
 
 .sidebar-grid-item-1 ul li a svg.animated {
     transform: rotate(-90deg);
+}
+
+@media(max-width:900px){
+
+ 
+
+  .nav-list{
+    position: absolute;
+    top: 0;
+    right: -200px; /* because of closing animation */
+    height: 510px;
+    width: 200px;
+    padding-top: 2rem;
+    padding-right: 3rem;
+    background: linear-gradient(150deg, rgba(255,224,224,1) 0%, rgba(238,238,238,1) 71%);
+    transition: 1s;
+  }
+
+  .sidebar-grid-item-1 ul li a svg {
+    display: none;
+  }
+
+  .sidebar-grid-item-1 ul li a{
+    align-items: flex-start;
+    margin-left: 2rem;
+  }
+
+  .barsIcon {
+    position: absolute;
+    top: 4rem;
+    right: 3rem;
+    z-index: 10;
+    cursor: pointer;
+  }
+
+  .closeIcon {
+    padding-left: 2rem;
+    margin-bottom: 2rem;
+    z-index: 12;
+    color: rgb(90, 50, 50);
+    cursor: pointer;
+  }
+
 }
 
 /*** css item 2 - container (vše kromě sidebaru a footeru) ***/
@@ -187,8 +267,15 @@ h3 {
   position: relative;
   grid-template-columns: 130px 1fr;
   min-height: 100vh;
-  
 }
+
+@media(max-width:900px){
+  .titul {
+    left: 0;
+    padding-left: 1rem;
+  }
+}
+
 
 #prvni {
  display: flex;
@@ -199,17 +286,23 @@ h3 {
  justify-content: center;
  background: radial-gradient(circle at 50% 50%, #fff , transparent 70%);
  padding-top: 20vh;
- padding-right: 100px;
+ padding-right: 1rem;
+}
+
+@media(max-width:900px){
+  #prvni {
+    right: 10%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 
-h1 {
-  font-family: nadpisovy;
-  font-size: 3rem;
-  z-index: 10;
-  text-align: center;
-  margin-bottom: 20px;
-}
+
+
+
 
 .text_underline {
   background-image: linear-gradient(130deg, rgba(7, 0, 46, 0.9) 0%, rgba(0, 3, 185, 0.9) 100%);
@@ -218,22 +311,22 @@ h1 {
   background-position: 0 100%;
 }
 
-#popispodh1 {
-  width: 500px;
+#prvni p {
+  font-size: clamp(1rem, 3vw, 1.5rem);
+  max-width: 30rem;
   text-align: center;
   margin: 40px 0;
-  font-size: 1.5rem;
   color: #535353;
 }
 
 /* buttons */
 
 .butt1 {
-  width: 330px;
+  font-size: clamp(1rem, 3vw, 1.3rem) !important;
 }
 
-.butt2 {
-  width: 270px;
+.butt1 span {
+  padding: 0 1rem;
 }
 
 /** colorful buttons - codepen **/
@@ -627,21 +720,9 @@ h1 {
 /** section: invest with us **/
 
 .firstContent {
-  width: 100%;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  padding-top: 100px;
-  align-items: center;
-  padding-bottom: 150px;
-  background: rgb(255,255,255);
-  background: linear-gradient(180deg, rgba(255,255,255,1) 0%, rgba(106,106,102,0) 52%);
-}
-
-h2 {
-  font-family: nadpisovy;
-  font-size: 2rem;
+  max-width: 90%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .firstContent p {
@@ -651,18 +732,65 @@ h2 {
 }
 
 .gridInvestWithUs{
-  width: 80%;
-  margin-top: 5%;
+  
+  margin: 5rem 0;
+  margin-left: auto;
+  margin-right: auto;
   display: grid;
+  gap: 2rem;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: min-content 1fr min-content;
-  column-gap: 1.5vw;
-  row-gap: 15px;
+  grid-template-areas: 
+  'firstPic firstDescription'
+  'secondDescription secondPic'
+  'thirdPic thirdDescription';
+  min-width: 1000px;
+  max-width: 70rem;
   align-items: center;
 }
 
+.firstPic {
+  grid-area: firstPic;
+}
+
+.firstDescription {
+  grid-area: firstDescription;
+}
+
+.secondPic {
+  grid-area: secondPic;
+}
+
+.secondDescription {
+  grid-area: secondDescription;
+}
+
+.thirdPic {
+  grid-area: thirdPic;
+}
+
+.thirdDescription {
+  grid-area: thirdDescription;
+}
+
+@media(max-width:1200px){
+  .gridInvestWithUs {
+    grid-template-areas: 
+    'firstPic'
+    'firstDescription'
+    'secondPic'
+    'secondDescription'
+    'thirdPic'
+    'thirdDescription';
+    grid-template-columns: min(35rem,100%);
+    min-width: 0;
+    max-width: auto;
+    width: min(35rem,100%);
+  }
+}
+
+
 .reason-col img {
-  width: 100%;
+  width: max(20rem, 100%);
   box-shadow: 0 0 20px 0px rgba(0,0,0,0.2);
 }
 
@@ -670,24 +798,30 @@ h2 {
 
 .chooseUS {
  text-align: center;
+ margin: 2rem auto;
+ max-width: 90%;
 }
 
 .chooseUS h2 {
   margin-bottom: 2rem;
 }
 
+.chooseUS p {
+  line-height: 2rem;
+}
+
 .boxRow {
   display: flex;
-  margin: 2rem 5rem;
+  
 }
 
 .box-col1 {
   flex-basis: 32%;
 
-  margin: 20px;
+  margin: 1rem 1rem;
   border-radius: 10px;
   height: 20rem;
-  padding: 20px;
+  padding: 1rem;
   position: relative;
   overflow: hidden;
   background: rgb(218, 215, 215);
@@ -710,98 +844,152 @@ background: linear-gradient(23deg, rgba(226, 224, 224, 0.61) 85%, rgba(233, 233,
  position: relative;
 }
 
+@media (max-width:1150px) {
+  .chooseUS {
+    width: min(35rem,100%);
+  }
+
+  .boxRow {
+    flex-wrap: wrap;
+    margin-right: auto;
+    margin-left: auto;
+    width: min(25rem,100%);
+  }
+
+  .box-col1 {
+    flex-basis: auto;
+    flex-grow: 1;
+  }
+}
+
 /* testimonial */
 
-.testimonialRow {
-  display: flex;
-  width: 3200px;
-  transition: all 0.5s;
-}
-
-.testimonialSlideCol {
-  width: 800px;
-  height: 400px;
-  position: relative;
-}
-
-.clientImg {
-  position: absolute;
- 
-  right: 0;
-  height: 100%;
-}
-
-.clientImg img {
-  height: 70%;
-  border-radius: 10px;
-  transform: translateX(-10%);
-}
-
-.clientText {
-  background: rgb(0,0,0);
-  background: linear-gradient(130deg, rgba(0,0,0,0.9) 0%, rgba(0,2,124,0.9) 100%);
-  width: 520px;
-  color: #e0e0e0;
-  text-shadow: #a0a0a0;
-  height: 270px;
-  position: absolute;
-  left: 0;
-  
-  transform: translateY(5%);
-  border-radius: 10px;
-  padding: 45px;
-  box-sizing: border-box;
-  z-index: 2;
-}
-
-.clientText p {
-  line-height: 24px;
-}
-
-.clientText h3 {
-  margin: 35px 0 5px;
-}
-
 .testimonials {
-  width: 800px;
-  height: 400px;
-  
-  margin: auto;
-  margin-bottom: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 3rem 0;
 }
 
-.indicator {
+.testimonial-container {
   position: relative;
-  left: 82%;
-  transform: translateX(-50%);
-  bottom: -85%;
-  z-index: 10;
-}
-
-.btn {
-  display: inline-block;
-  height: 15px;
-  width: 15px;
-  margin: 4px;
-  border-radius: 15px;
-  background:rgb(74, 77, 105);
-  cursor: pointer;
-}
-
-.active {
-  background:rgb(22, 8, 54);
-  transition: all 0.5s;
-}
-
-.testimonialContent {
+  max-width: 800px;
+  min-width: 350px;
+  min-height: 250px;
+  padding-bottom: 40px;
   overflow: hidden;
 }
 
-.testimonials span {
+.testimonial-wrapper {
+  width: 300%;
+  min-height: 100%;
+  display: flex;
+  justify-content: space-between;
+  transition: 1s;
+}
+
+.testimonial-card {
+  width: 800px;
+  min-height: 100%;
+  background: #fff;
+  border-radius: 20px;
+  box-shadow: 0 10px 20px rgba(0, 76, 180, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  margin: 0 10px;
+}
+
+.testimonial-card-thumb {
+  width: 70%;
+  height: 250px;
+  overflow: hidden;
+  border-radius: 10px;
+  position: relative;
+}
+
+.client-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.client-name {
   
-  font-family: nadpisovy;
-  font-size: 2rem;
-  font-weight: 1000;
+}
+
+.client-business {
+
+  color: #404660;
+  font-size: 0.9rem;
+}
+
+.testimonial-card-body {
+  width: 120%;
+  min-height: 100%;
+  height: auto;
+  margin-left: 20px;
+  position: relative;
+  padding-bottom: 50px;
+  display: flex;
+  flex-direction: column;
+}
+
+.rating {
+  line-height: 1.7rem;
+  margin: 2.5rem 0;
+}
+
+.testimonial-indicators {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.testimonial-indicators button {
+  background: none;
+  outline: none;
+  border: none;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  border: 0.1rem solid rgba(6, 15, 148, 0.7);
+  cursor: pointer;
+  margin-left: 0.5rem;
+  transition: 0.5s;
+}
+
+button.active {
+  width: 2rem;
+  background: rgba(6, 15, 148, 0.5);;
+  border-radius: 0.5rem;
+}
+
+@media (max-width: 1000px){
+  .testimonial-container {
+    width: 60%;
+  }
+
+  .testimonial-card {
+    flex-direction: column;
+  }
+
+  .testimonial-card-thumb {
+    width: 100%;
+    border-radius: 10px;
+  }
+
+  .testimonial-card-body {
+    width: 100%;
+    min-height: auto;
+    margin-left: 0;
+  }
+
+  .client-name {
+    bottom: 2rem;
+  }
 }
 
 /*** css item 3 - footer ***/
@@ -817,29 +1005,39 @@ background: linear-gradient(23deg, rgba(226, 224, 224, 0.61) 85%, rgba(233, 233,
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 35rem;
+  height: 30rem;
   background: rgb(0,0,0);
   background: linear-gradient(130deg, rgba(0,0,0,1) 0%, rgba(0,2,124,1) 100%);
 }
 
+.butt2 {
+  width: min(40vw, 270px);
+  min-width: 200px;
+  font-size: clamp(1.2rem, 3vw, 1.3rem) !important;
+ }
+
 .reftoContactform h3 {
-  margin-bottom: 50px;
+  margin: 2rem 1rem;
+  text-align: center;
   color: #e0e0e0;
   text-shadow: #a0a0a0;
   letter-spacing: 0.2rem;
+  font-size: clamp(1.3rem, 3vw, 1.8rem);
 }
 
 .navandLogo {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: 'newsletter bottomMenu';
 }
 
-.logoandNewsletter {
-  width: 50%;
-  height: 300px;
+.Newsletter {
+  height: 20rem;
   background-color: rgb(48, 48, 48);
+  grid-area: newsletter;
 }
 
-.logoandNewsletter h4 {
+.Newsletter h4 {
   margin: 50px;
   line-height: 2rem;
   font-size: large;
@@ -847,24 +1045,27 @@ background: linear-gradient(23deg, rgba(226, 224, 224, 0.61) 85%, rgba(233, 233,
   text-shadow: #a0a0a0;
 }
 
-.logoandNewsletter button {
+.Newsletter button {
   width: 200px;
+  font-size: clamp(1.2rem, 3vw, 1.3rem) !important;
 }
 
-.logoandNewsletter button {
+.Newsletter button {
   margin-left: 50px;
 }
 
 .footerNavContacts {
-  width: 50%;
+  height: 20rem;
   background-color: rgb(255, 255, 255);
   display: flex;
   justify-content: space-between;
+  grid-area: bottomMenu;
 }
 
 .footerNavContacts ul {
   list-style: none;
   margin: 50px;
+  min-width: 120px;
 }
 
 .footerNavContacts ul li a {
@@ -878,10 +1079,22 @@ background: linear-gradient(23deg, rgba(226, 224, 224, 0.61) 85%, rgba(233, 233,
 }
 
 .footerNavContacts img {
- margin-top: 30px;
- margin-left: 30px;
- height: 230px;
+  align-self: center;
+  width: min(150px,20vw);
 }
+
+@media (max-width: 900px) {
+  .navandLogo{
+  grid-template-areas: 'newsletter'
+  'bottomMenu';
+  grid-template-columns: 1fr;
+  }
+
+  .Newsletter h4 {
+    font-size: medium;
+  }
+}
+
 /* disclaimer */
 
 .disclaimer {
@@ -894,7 +1107,6 @@ background: linear-gradient(23deg, rgba(226, 224, 224, 0.61) 85%, rgba(233, 233,
   color: #535353;
   width: 65%;
   text-align: left;
-  padding-left: 130px;
 }
 
 .disclaimer h3 {
