--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 body {
   font-family: 'Montserrat', sans-serif;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -170,6 +171,12 @@ h3 {
     transform: rotate(-90deg);
 }
 
+.closeIcon {
+  position: absolute;
+  
+  left: -9999px;
+}
+
 @media(max-width:900px){
 
  
@@ -180,7 +187,7 @@ h3 {
     right: -200px; /* because of closing animation */
     height: 510px;
     width: 200px;
-    padding-top: 2rem;
+    padding-top: 6rem;
     padding-right: 3rem;
     background: linear-gradient(150deg, rgba(255,224,224,1) 0%, rgba(238,238,238,1) 71%);
     transition: 1s;
@@ -204,8 +211,10 @@ h3 {
   }
 
   .closeIcon {
+    display: auto;
+    top: 2rem;
+    left: 0;
     padding-left: 2rem;
-    margin-bottom: 2rem;
     z-index: 12;
     color: rgb(90, 50, 50);
     cursor: pointer;
