--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -45,7 +45,7 @@
 .picture-greyDoubleCol {
     flex-basis: 60%;
     grid-area: pic;
-    background-image: url(../images/peakpx.jpg);
+    background-image: url(../images/how-it-all-started.jpg);
     background-position: center;
     background-size: cover;
     min-height: 400px;
@@ -86,6 +86,7 @@
     padding: 0 10%;
     grid-template-areas: 'miki-text miki-pic'
     'matt-pic matt-text';
+    line-height: 2rem;
 }
 
 .matt-text-class {
@@ -128,6 +129,7 @@
 
 .box-col1 p {
     margin-top: 0;
+    line-height: 2rem;
 }
 
 .box-col1 .role {
@@ -138,14 +140,14 @@
 }
 
 .box-col1 .description {
-    line-height: 1.5rem;
+    line-height: 2rem;
 }
 
 .box-col1 img {
     width: 100%;
 }
 
-.layer {
+/* .layer {
     background: linear-gradient(130deg, rgba(0,0,0,1) 0%, rgba(0,2,124,1) 100%);
     opacity: 0;
     height: 100%;
@@ -177,7 +179,7 @@
 .layer:hover p {
     bottom: 30%;
     opacity: 1;
-}
+} */
 
 .firstContent {
     padding-bottom: 0;
