--- a/css/style.css
+++ b/css/style.css
@@ -455,7 +455,7 @@ h3 {
     border-radius: 24px;
     padding: 0;
     margin: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Raleway', sans-serif;
     text-align: center;
     min-width: 140px;
     letter-spacing: 0.02em;
