--- a/css/services.css
+++ b/css/services.css
@@ -28,17 +28,17 @@
 .articles {
     margin-left: auto;
     margin-right: auto;
-    max-width: min(800px,80%);
+    max-width: min(800px,100%);
 }
 
 /* service description */
 
 .firstContent {
     display: block;
-    padding: 0 10%;
     text-align: left;
     align-items: left;
     margin-bottom: 3rem;
+    padding: 0;
 }
 
 .firstContent h3 {
@@ -52,7 +52,6 @@
   display: flex;
   flex-direction: column;
   text-align: left;
-  padding: 50px 10%;
   align-items: left;
 }
 
