--- a/css/whatwedo.css
+++ b/css/whatwedo.css
@@ -39,6 +39,12 @@
     line-height: 3rem;
 }
 
+.box-col1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .boxRow {
     
     max-width: min(1100px,100%);
@@ -77,4 +83,8 @@
     margin-top: 1.5rem;
     width: 60px;
     height: 60px;
+}
+
+.percent {
+   bottom: 0;
 }
